fix wrapping

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -16,7 +16,7 @@
 }
 
 .w-80ch {
-  width: 80ch;
+  max-width: 80ch;
 }
 
 .w-80vw {
